# nsd_compositionality

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  run.py  setup.cfg  tox.ini
.github/workflows/: tests.yml
bash/: setup_conda.sh
configs/: config.yaml
configs/data/: data.yaml
configs/experiment/: example_full.yaml  example_simple.yaml
configs/logger/: many_loggers.yaml
configs/model/: compositional_benchmarking.yaml  embeddings.yaml  image_embeddings.yaml  mvpa_decoder.yaml  neural_encoder.yaml  pretrain_graphormer.yaml  probing_graph_measures.yaml  structural_probe.yaml  train_graph_clip.yaml  train_graph_clip_with_text.yaml  train_graph_image_model.yaml  train_graph_image_model_with_text.yaml
configs/preprocessing/: preprocessing.yaml
configs/visualization/: graph_measures_performances.yaml  mvpa_decoder_performances.yaml  mvpa_decoder_weights.yaml  neural_encoder_performances.yaml  scene_graphs.yaml
src/: train.py
src/data/: preprocess_nsd_coco.py
src/models/: image_embeddings.py  modeling_graph_image_model.py  mvpa_decoder.py  neural_encoder.py  probing_graph_measures.py
src/nsd_compositionality/: train.py
src/nsd_compositionality/data/: preprocess_graphormer.py  preprocess_nsd_coco.py  preprocess_vg_for_graphormer.py
src/nsd_compositionality/models/: compositional_benchmarking.py  embeddings.py  image_embeddings.py  modeling_graph_image_model.py  mvpa_decoder.py  neural_encoder.py  pretrain_graphormer.py  probing_graph_measures.py  structural_probe.py  train_graph_clip.py  train_graph_image_model.py
src/nsd_compositionality/models/graph_clip_model/: configuration_graph_clip.py  modeling_graph_clip.py
src/nsd_compositionality/utils/: nsd_data_utils.py
src/nsd_compositionality/visualization/: graph_measures_performances.py  mvpa_decoder_performances.py  mvpa_weights.py  neural_encoder_performances.py  scene_graphs.py
src/tests/: test_modeling_graph_clip.py  test_modeling_graph_image_model.py
src/visualization/: graph_measures_performances.py  mvpa_decoder_performances.py  mvpa_weights.py  neural_encoder_performances.py
