[metadata]
project_name = nsd-compositionality
author = Helena Balabin
contact = helena.balabin@kuleuven.be
license_file = LICENSE
description_file = README.md

[isort]
line_length = 120
profile = black
filter_files = True

[flake8]
max_line_length = 120
show_source = True
format = pylint
ignore =
    W504  # Line break occurred after a binary operator
    F841  # Local variable name is assigned to but never used
exclude =
    .git
    __pycache__
    data/*
    tests/*
    notebooks/*
    logs/*

[mypy]
files=src
ignore_missing_imports=true
