[metadata]
project_name = nsd_compositionality
author = Helena Balabin
contact = helena.balabin@kuleuven.be
license_file = LICENSE
description_file = README.md

[isort]
line_length = 120
profile = black
filter_files = True

[flake8]
max_line_length = 120
show_source = True
format = pylint
ignore =
    W504
    F841
exclude =
    .git
    __pycache__
    data/*
    tests/*
    notebooks/*
    logs/*

[mypy]
files=src
ignore_missing_imports=true
